# Fuzzer

./: .gitignore  .gitmodules  README.md  test.mlir
MLIR/: README.md
MLIR/utils/: transfer.cpp  utils.cpp
MLIRFuzzer/: README.md
MLIRFuzzer/mlir-opt/: CMakeLists.txt
MLIRFuzzer/src/: GetDialectName.cpp  MIX.cpp  temp.json  tosaGen.cpp  tosaGenC.cpp  tosaGenU.cpp
MLIRFuzzer/utils/: create.cpp  opinfo.cpp  tosaOps.json  transfer.cpp  utils.cpp
fuzz_tool/: debug.sh  run.sh  run_fuzz.sh  run_fuzzing.sh  run_generator.sh
fuzz_tool/conf/: conf.yml  conf1.yml  init.sql
fuzz_tool/src/: dialect_mix.py  dialect_statistics.py  dialect_statistics_test.py  eval_graphFuzzer.py  eval_nnsmith.py  getFunction.py  main.py  main1.py  main_copy.py  sql.py  test.db  testdata_pre.py
fuzz_tool/src/fuzz/: directed.py  fuzz.py  fuzz1.py  pass_enum.py  pass_enum1.py
fuzz_tool/src/generator/: tosaGen.py
fuzz_tool/src/utils/: config.py
llvm-project-16/: .gitignore  README.en.md
llvm-project-16/mlir/include/mlir/TosaGen/: create.h  opinfo.h  transfer.h  utils.h
llvm-project-16/mlir/test/: temp.json
llvm-project-16/mlir/test/lib/: CMakeLists.txt
llvm-project-16/mlir/test/lib/Pass/: AttrGenPass.cpp  BogusCF.cpp  CMakeLists.txt  GetDialectName.cpp  MIX.cpp  NodeCopy.cpp  NodeRemoval.cpp  NodeSwith.cpp  OpsTowardPass.json  Substitution.cpp  TrueGuard.cpp  tosaGen.cpp  tosaGenC.cpp  tosaGenU.cpp
llvm-project-16/mlir/test/lib/TosaGen/: CMakeLists.txt
llvm-project-16/mlir/tools/mlir-opt/: mlir-opt.cpp
